Fix dropdown option visibility in dark theme, thanks Tom

--- a/apps/_dashboard/static/css/no.css
+++ b/apps/_dashboard/static/css/no.css
@@ -219,6 +219,13 @@ input[type='color']:focus, input[type='date']:focus, input[type='time']:focus, i
 
 select {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 8" width="30"><path fill="%23d1d1d1" d="M0,0l6,8l6-8"/></svg>') center right no-repeat;
+  background-color: #222 !important;
+  color: white !important;
+}
+
+select option {
+  background-color: #222;
+  color: white;
 }
 
 select[multiple] {
